--- a/Gimnasio/html/home.html
+++ b/Gimnasio/html/home.html
@@ -15,6 +15,7 @@
     <header>
         <!--El header incluye el logo, el nombre, el login y el navegador-->
         <div id="banner">
+            <!--El logo y el nombre del gimnasio-->
             <div id="logo">
                 <img src="../recursos/logotipo-brazo-de-gimnasio.png" alt="brazo izquierdo">
             </div>
@@ -23,80 +24,92 @@
             </div>
         </div>
         <div id="logNav">
+            <!--Login y navegador -->
             <div id="login" class="boton">
                 <a href="login.html"> <img src="../recursos/zapatilaGim.PNG" alt="LOGIN"> LOGIN</a>
             </div>
             <nav>
-                <ul id="navPrin">
-                    <li class="boton"> <a href="../html/home.html">Home</a> </li>
-                    <li class="boton">Herramientas
-                        <ul id="navTools">
-                            <li class="boton"><a href="../html/imcCalculadora.html">IMC</a></li>
-                            <li class="boton"><a href="../html/fcmCalculadora.html">FCM</a></li>
-                        </ul>
+                <ul class="navPrin">
+                    <li class="boton">
+                        <a href="../html/home.html">
+                            <span class="txtNav">Home</span>
+                        </a>
                     </li>
-                    <li class="boton"><a href="fisioterapeuta.html">Fisios</a></li>
-                    <li class="boton"><a href="actividadSala.html">Actividades</a></li>
-                    <li class="boton"><a href="">Galería</a></li>
+                    <li class="boton">
+                        <a href="../html/imcCalculadora.html">
+                            <span class="txtNav">IMC</span>
+                        </a>
+                    </li>
+                    <li class="boton">
+                        <a href="../html/fcmCalculadora.html">
+                            <span class="txtNav">FCM</span>
+                        </a>
+                    </li>
+                    <li class="boton">
+                        <a href="fisioterapeuta.html">
+                            <span class="txtNav">Fisios</span>
+                        </a>
+                    </li>
+                    <li class="boton">
+                        <a href="actividadSala.html">
+                            <span class="txtNav">Actividades</span>
+                        </a>
+                    </li>
+
                 </ul>
             </nav>
         </div>
     </header>
 
-    <aside>
-        <!--Un aside simple anunciando ofertas-->
-
-    </aside>
 
     <section>
         <!--Zona principal de body. En esta hoja solo tiene el logo un par de frases motivacionales y la galeria.-->
 
         <div id="home">
-            <p>Empieza ahora y no pares</p>
-            <p>No dejes para más tarde lo que ya estás haciendo ahora</p>
+            <p>- La suerte es proporcional al sudor. Cuanto más sudas, más suerte tienes. - Ray Kroc</p>
+            <p>- No se trata de si te derriban, se trata de si te levantas. - Vince Lombardi</p>
+            <p>- No te rindas. Sufre ahora y vive el resto de tu vida como un campeón. - Muhammad Ali</p>
+            <div id="motivacionales"></div>
         </div>
 
-
+        <h2>Galeria de imagenes</h2>
         <div id="fotoGaleria">
-            <div clas="galeria">
-                <img src="" alt="">
+
+            <div class="galeria">
+                <img src="../recursos/mancuernas.jpg" alt="mancuernas">
             </div>
-            <div clas="galeria">
-                <img src="" alt="">
+            <div class="galeria">
+                <img src="../recursos/salaPesas.jpg" alt="pesas">
             </div>
-            <div clas="galeria"> 
-                <img src="" alt="">
+            <div class="galeria">
+                <img src="../recursos/salaCardio.jpg" alt="sala cardio">
             </div>
-            <div clas="galeria"> 
-                <img src="" alt="">
+            <div class="galeria">
+                <img src="../recursos/spinin.jpg" alt="bicis">
             </div>
-            <div clas="galeria"> 
-                <img src="" alt="">
+            <div class="galeria">
+                <img src="../recursos/tatami.jpeg" alt="tatami">
             </div>
-            <div clas="galeria"> 
-                <img src="" alt="">
+            <div class="galeria">
+                <img src="../recursos/salto.jpg" alt="salto">
             </div>
         </div>
     </section>
 
     <footer>
         <!--El pie de la página. Contiene las redes sociales, rss y el anuncio de copyright -->
-        <div id="rss">
-            <img src="../recursos/icono/rss.jpg" alt="">
-            <p>Enterate de las novedades (RSS feed)</p>
-        </div>
+
         <div id="redes">
-            <img id="tw" src="../recursos/icono/twitter.jpg" alt="Twitter">Twitter</br>
+            <img src="../recursos/icono/rss.jpg" alt="rss">Enterate de las novedades (RSS feed)</br>
+            <img id="tw" src="../recursos/icono/twitter.jpg" alt="Twitter">Twitter
             <img id="fcb" src="../recursos/icono/facebook.jpg" alt="Facebook">Facebook</br>
             <img id="flc" src="../recursos/icono/flickr.jpg" alt="Flickr">Flickr</br>
         </div>
 
         <div id="gim">
-            <img src="../recursos/icono/logotipo-brazo-de-gimnasio2.png" alt="Mozilla">
-            <p>Muscle Up</p>
-            <p>Privacy policy</p>
-            <p>Portion of this content are &copy; 2010 by individual drumbeat.org contributors. Content available under
-                a <span>Creative Commons license</span>.</p>
+            <img src="../recursos/icono/logotipo-brazo-de-gimnasio2.png" alt="Mozilla"> Muscle Up</br>
+            <p>Politica de privacidad</p>
+            <p>Contenido con &copy; 2010 <span>Creative Commons license</span>.</p>
         </div>
 
 
