--- a/Gimnasio/html/imcCalculadora.html
+++ b/Gimnasio/html/imcCalculadora.html
@@ -62,33 +62,34 @@
     </header>
     <hr>
 
-    <script>
-    </script>
-
-    <label for="altura">Altura:&nbsp;</label>
-    <input type="text" name="altura" id="altura">
-    <br />
-    <label for="peso">Peso:&nbsp;</label>
-    <input type="text" name="peso" id="peso">
-    <br />
-    <input type="button" onclick="imc()" value="Enviar">
+    <section>
 
 
-    <h2>El valor de su imc es:
-        <res id="resultado"></res>
-    </h2>
+        <label for="altura">Altura:&nbsp;</label>
+        <input type="text" name="altura" id="altura">
+        <br />
+        <label for="peso">Peso:&nbsp;</label>
+        <input type="text" name="peso" id="peso">
+        <br />
+        <input type="button" onclick="imc()" value="Enviar">
 
-    <ul id="clasificacion">
-        <li id='infraSevera'> &lt;16.00: Infrapeso (delgadez severa).</li>
-        <li id='infraMod'>16.00-16.99: Infrapeso (delgadez moderada).</li>
-        <li id='infraAcep'>17.00-18.49: Infrapeso (delgadez aceptable).</li>
-        <li id='norm'>18.50-24.99: Peso normal.</li>
-        <li id='sobre'>25.00-29.99: Sobre peso.</li>
-        <li id='obeso1'>30.00-34.99: Obeso (Tipo I)</li>
-        <li id='obeso2'>35.00-40.00: Obeso (Tipo II)</li>
-        <li id='obeso3'>&gt;40.00: Obeso (Tipo III)</li>
-    </ul>
 
+        <h2>El valor de su imc es:
+            <res id="resultado"></res>
+        </h2>
+
+        <ul id="clasificacion">
+            <li id='infraSevera'> &lt;16.00: Infrapeso (delgadez severa).</li>
+            <li id='infraMod'>16.00-16.99: Infrapeso (delgadez moderada).</li>
+            <li id='infraAcep'>17.00-18.49: Infrapeso (delgadez aceptable).</li>
+            <li id='norm'>18.50-24.99: Peso normal.</li>
+            <li id='sobre'>25.00-29.99: Sobre peso.</li>
+            <li id='obeso1'>30.00-34.99: Obeso (Tipo I)</li>
+            <li id='obeso2'>35.00-40.00: Obeso (Tipo II)</li>
+            <li id='obeso3'>&gt;40.00: Obeso (Tipo III)</li>
+        </ul>
+
+    </section>
     <footer>
         <!--El pie de la página. Contiene las redes sociales, rss y el anuncio de copyright -->
 
