--- a/Cliente/pruebas/Cokies/cokies.html
+++ b/Cliente/pruebas/Cokies/cokies.html
@@ -15,6 +15,35 @@
         //crear cokies
         document.cookie="comida_favorita=arroz; max-age=3600";
         document.cookie="color_favorito=amarillo";
+
+        var testvalue="Hola mundo";
+        document.cookie="testcookie="+encodeURIComponent(testvalue);
+
+        //Cookie con caducidad para el 16 de diciembre de 2021 a las 19:29
+        var expiresdate=new Date(2021,11,16,19,29);
+        var cookievalue="Buenas tardes!";
+        document.cookie="testcookie2="+encodeURIComponent(cookievalue)+"; expires="+expiresdate.toUTCString();
+
+
+        //cokie caducidad 17 del 12 de 2021, a las 15:20
+        document.cookie="username=Max Brown; expires=Wed, 17 Dec 2021 15:20:00 UTC";
+
+        //borrar cookie
+        document.cookie="username=Max Brown; max-age=0";
+
+        //modificar cookie
+        document.cookie="color_favorito=azul";
+
+
+        //mostrar cookie por pantalla
+        var listadoCookies=document.cookie;
+        alert(listadoCookies);
+
+        // var array=listadoCookies.split();
+        // for(){
+
+        // }
+
     </script>
 </body>
 
