--- a/Interfaces/JQuery/Ejemplo08a.html
+++ b/Interfaces/JQuery/Ejemplo08a.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Ejemplo7</title>
+    <title>Ejemplo8a</title>
     <script src="jQuery/jquery-3.4.1.min.js" type="text/javascript"></script>
 
     <script>
