--- a/Interfaces/JQuery/Ejemplo10.html
+++ b/Interfaces/JQuery/Ejemplo10.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Ejemplo10. Evento toggle</title>
-    <script src="jQuery/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-1.8.3.min.js" type="text/javascript"></script>
 
     <script>
         var poner_Rojo=function(){$(this).css("color","rgb(255,0,0)");}
