--- a/Interfaces/JQuery/Ejemplo15.html
+++ b/Interfaces/JQuery/Ejemplo15.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Ejemplo14. Evento toggle</title>
+    <title>Ejemplo15. Evento toggle con hover</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" type="text/javascript"></script>
 
     <script>
@@ -59,47 +59,38 @@
             top:60px;
             left: 10px;
         }
-        #menu_oculto{
-            display: none;
-            width: 800px;
-            height: auto;
-            padding-left: 120px;
-            padding-top: 30px;
-            padding-bottom: 40px;
-            padding-right: 30px;
-            margin-top: 20px;
+        #menu{
+            text-align: center;
+            display: block;
             background-color: #222;
-            border-radius: 15px;
-
         }
+
         li{
+            display: inline;
             list-style: none;
+            text-transform: uppercase;
+            margin: 10px;
+            padding: 10px;
+        }
+        a{
+            color: white;
+        }
+        a:hover{
+            color: orange;
         }
 
     </style>
 </head>
 
 <body>
-    <div id="panel-oculto">
-        <h1>PANEL DESLIZANTE</h1>
-        <p>Aquí está el panel deslizante realizado con JQuery con la funcion de alterar (toggle) y algo de CSS3 para las esquias redondeadas.</p>
-        <p>Este panel también se puede colocar a la derecha.</p>
-        <p>Esto podría ser particularmente útil si, <a href="#">like me</a>, tiene un diseño de sitio web alineado a la izquierda.</p>
-        <h1>UN POCO SOBRE MI</h1>
-    </div>
-
-    <div id="menu_oculto">
-        <h1>MENÚ PANEL 1</h1>
+    <div id="menu">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">A cerca de</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="#">Menú Op 1</a></li>
+            <li><a href="#">Menú Op 2</a></li>
+            <li><a href="#">Menú Op 3</a></li>
+            <li><a href="#">Menú Op</a></li>
         </ul>
     </div>
-    <input type="button" id="mostrar_panel" value="Infor +">
-    <input type="button" id="mostrar_menu" value="Menú +">
 </body>
 
 </html>
