cliente ejercicio 1 y preparacion 2

--- a/Cliente/Ejercicios/AJAX/02.html
+++ b/Cliente/Ejercicios/AJAX/02.html
@@ -8,3 +8,18 @@ Javascript, la lista ul inicial se puede crear
 con html) mediante una petición GET al servidor. 
 Usad responseXML para recuperar el XML.
 -->
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Ejercicio 02 Ajax</title>
+    <script>
+
+    </script>
+</head>
+
+<body>
+
+</body>
+
+</html>
