--- a/Interfaces/JQuery/profesora/ejemplo15.html
+++ b/Interfaces/JQuery/profesora/ejemplo15.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		    <title>Menú deslizante con jQuery y Hover </title>
 		    <link rel="stylesheet" href="ejemplo15.css" type="text/css" media="screen" />
-		   <script src="jquery-3.4.1.min.js" type="text/javascript"></script>
+		   <script src="../jQuery/jquery-3.4.1.min.js" type="text/javascript"></script>
 
 		    <script type="text/javascript">
 			// Ejecutamos la funcion ya que se cargo el documento
