Cliente JSon Gimnasio

--- a/Cliente/Ejercicios/AJAX/04.html
+++ b/Cliente/Ejercicios/AJAX/04.html
@@ -3,8 +3,7 @@
 Nombre: Boby
 Especie: Perro
 Patas: 4
-El bloque de div se cambiará a “En proceso” desde que se pulsa el botón hasta que la petición se ha completado y
-comienza el proceso de grabación de datos. -->
+El bloque de div se cambiará a “En proceso” desde que se pulsa el botón hasta que la petición se ha completado y comienza el proceso de grabación de datos. -->
 
 <html lang="es">
 
