--- a/Cliente/Ejercicios/AJAX/06.html
+++ b/Cliente/Ejercicios/AJAX/06.html
@@ -12,10 +12,47 @@ Presenta el documento obtenido mediante AJAX usando métodos de Javascript. Pued
 <html lang="es">
 
 <head>
+    <title>Ejercicio 6</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="author" content="">
+    <style></style>
+    <script>
+        if (window.XMLHttpRequest) {
+            peticion_http = new XMLHttpRequest();
+            //alert("Su navegador soporta AJAX con objetos XMLHttpRequest");
+        } else if (window.ActiveXObject) {
+            peticion_http = new ActiveXObject("Microsoft.XMWHTTP");
+            // alert("Su navegador soporta AJAX con objetos ActiveXObject");
+        } else {
+            alert("Su navegador no soporta AJAX ");
+        }
+        //Asignar la funcion de procesamiento
+        peticion_http.onreadystatechange = procesaRespuesta;
+        //Preparar la peticion
+        peticion_http.open("GET", "json_06gimnasio.json", true);//asincrono
+        //Enviar la petición
+        peticion_http.send(null);
 
+    </script>
 </head>
 
 <body>
+
+    <input type="button" id="cargar" value="Mostrar Actividades">
+    <script>
+        document.getElementById("cargar").addEventListener("click", crearTabla, false);
+        function crearTabla() {
+            var docJson = null;
+            if (peticion_http.readyState == 4 && peticion_http.status == 200) {
+                respTxt = peticion_http.responseTxt;
+            }
+            if(respTxt !=null){
+                var docJson = JSON.parse(respTxt);
+                var table=document.createElement("table");
+            }
+
+        }
+    </script>
 
 </body>
 
