--- a/Cliente/Ejercicios/AJAX/03.html
+++ b/Cliente/Ejercicios/AJAX/03.html
@@ -16,14 +16,13 @@ columnas Artista y Título
             border: 1px solid black;
             border-collapse: collapse;
         }
-
+        
         th,
         td {
             padding: 5px;
         }
     </style>
     <script>
-
         function procesaRespuesta() {
             parrafo.textContent = "Estado 4: " + peticion_http.readyState + ". Estado 200: " + peticion_http.status;
             if (peticion_http.readyState == 4 && peticion_http.status == 200) {
@@ -43,6 +42,7 @@ columnas Artista y Título
                 alert("Realizando, otra vez, la peticion http");
                 peticion_http.onreadystatechange = procesaRespuesta;
             }
+
             function crearItem(item) {
                 // alert("Creando lista");
                 var listado = document.getElementById("lista");
@@ -50,6 +50,54 @@ columnas Artista y Título
                 var nuevoTexto = document.createTextNode(item);
                 nuevoElemento.appendChild(nuevoTexto);
                 listado.appendChild(nuevoElemento);
+            }
+
+
+
+        }
+
+        function tablaCatalogo() {
+            if (window.XMLHttpRequest) {
+                peticion_http = new XMLHttpRequest();
+            } else if (window.ActiveXObject) {
+                peticion_http = new ActiveXObject("Microsoft.XMLHTTP");
+            } else {
+                alert("Su navegador no soporta ajax")
+            }
+
+            peticion_http.onreadystatechange = cargarTabla;
+            peticion_http.open("GET", "cd_catalog.xml", true);
+            peticion_http.send(null);
+        }
+
+        function crearTabla(titulo, artista) {
+            var table = document.getElementById("demo");
+            var tr = document.createElement("tr");
+            var td1 = document.createElement("td");
+            var td2 = document.createElement("td");
+            var texto1 = document.createTextNode(titulo);
+            var texto2 = document.createTextNode(artista);
+            td1.appendChild(texto1);
+            td2.appendChild(texto2);
+            tr.appendChild(td1);
+            tr.appendChild(td2);
+            table.appendChild(tr);
+        }
+
+        function cargarTabla() {
+            var parrafo = document.getElementById("parrafo");
+            if (peticion_http.readyState == 4 && peticion_http.status == 200) {
+                var listadoNoticia = peticion_http.responseXML.getElementsByTagName("CD");
+                for (i = 0; i < listadoNoticia.length; i++) {
+                    crearTabla(listadoNoticia[i].childNodes[1].textContent, listadoNoticia[i].childNodes[3].textContent);
+                    var table = document.getElementById("table");
+                    var tr = document.createElement("tr");
+                }
+                parrafo.innerText = "Datos recibidos";
+                //alert("Datos recibidos");
+            } else {
+                parrafo.innerText = "En proceso";
+                //alert("En proceso");
             }
         }
     </script>
@@ -66,9 +114,10 @@ columnas Artista y Título
     </ul>
     <table id="demo"></table>
     <script>
-        document.getElementById("cargaCatalogo").addEventListener("click", procesaRespuesta, false);
+        document.getElementById("cargaCatalogo").addEventListener("click", tablaCatalogo, false);
+        //document.getElementById("cargaCatalogo").addEventListener("click", procesaRespuesta, false);
 
-        //Crear el objeto
+        /* //Crear el objeto
         if (window.XMLHttpRequest) {
             peticion_http = new XMLHttpRequest();
             alert("En proceso, petición preparada");
@@ -83,9 +132,9 @@ columnas Artista y Título
         peticion_http.onreadystatechange = procesaRespuesta;
         alert("Procesando respuesta");
         //Preparar la peticion
-        peticion_http.open("GET", "cd_catalog.xml", true);//asincrono
+        peticion_http.open("GET", "cd_catalog.xml", true); //asincrono
         //Enviar la petición
-        peticion_http.send(null);
+        peticion_http.send(null); */
     </script>
 </body>
 
