--- a/Cliente/Ejercicios/JQuery/pruebas/03.html
+++ b/Cliente/Ejercicios/JQuery/pruebas/03.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Ejercicio 3</title>
-    <script src="jquery-3.6.0.min.js"></script>
+    <script src="../jquery-3.6.0.min.js"></script>
     <script>
         //$("p").filter(".importante") Selecciona todos los parrafos con la clase llamada "importante". Filtra de los encontrados.
         //$("p#primero").find("bold") devuelve etiquetas con negrita del parrafo con id "primero". Busca descendientes.
