--- a/Cliente/Ejercicios/JQuery/pruebas/02.html
+++ b/Cliente/Ejercicios/JQuery/pruebas/02.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Ejercicio 2</title>
-    <script src="jquery-3.6.0.min.js"></script>
+    <script src="../jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(inicio);
 
