--- a/Interfaces/JQuery/Ejemplo001.html
+++ b/Interfaces/JQuery/Ejemplo001.html
@@ -12,26 +12,22 @@
                 top: "35%"
             }, 100);
         }
-
+        var x;
         var timer;
         var reproducir = function() {
-
+            $("#cuadro1").css("display", "block");
             $("#cuadro1").animate({
                 left: "80%"
-            }, 4000);
-            $("#cuadro1").animate({
+            }, 4000).animate({
                 left: "18%"
             }, 10);
-
-            timer = setTimeout('reproducir()', 4000);
+            reproducir();
+            //timer = setTimeout('reproducir()', 4000);
         }
 
         $(document).ready(function() {
             $("#tv").click(function() {
                 caeSol();
-                $("#cuadro1").css("display", "block");
-
-
                 reproducir();
 
             });
@@ -74,9 +70,8 @@
             background-color: red;
             display: none;
             position: absolute;
-            top: 40%;
-            left: 18%;
-            margin: -40px 0 0 -25px;
+            top: 60%;
+            left: -150%;
             z-index: 2;
         }
         
